<resources>
    <string name="app_name">OurSpace</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="long_caption">Many of life\'s failures are people who did not realize how close they were to success when they gave up. \n-Thomas Alva Edison</string>
    <string name="cover_photo">Cover Photo</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="set_profile_photo">Set Profile Photo</string>
    <string name="set_cover_photo">Set Cover Photo</string>
    <string name="name">Name</string>
    <string name="bio">Bio</string>
    <string name="posts">Posts</string>
    <string name="likes">Likes</string>
    <string name="enter_here">Enter Here...</string>
    <string name="posts_photo">Posts Photo</string>
    <string name="double_tap_to_like">Double Tap to Like</string>
    <string name="discard">Discard</string>
    <string name="create">CREATE</string>
    <string name="publish">Publish</string>
    <string name="image_preview">*Image Preview*</string>
    <string name="what_s_in_your_mind">What\'s in your Mind?</string>
    <string name="add_image">Add Image</string>
    <string name="change_password">Change Password</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="save_password">Save Password</string>
    <string name="logout">Logout</string>
    <string name="create_post">Create Post</string>
    <string name="sign_in">SIGN IN</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t Have an account?</string>
    <string name="register">Register</string>
    <string name="sign_up">SIGN UP</string>
    <string name="already_have_an_account">Already Have an account?</string>
    <string name="ourspace_logo">OurSpace Logo</string>
    <string name="feed">Feed</string>
    <string name="add">Add</string>
    <string name="profile">Profile</string>
    <string name="notifications">Notifications</string>
    <string name="delete">Delete</string>
    <string name="hide">Hide</string>
    <string name="menu">Menu</string>

    <string-array name="userNames">
        <item name="User1">Adarsh Kumar Goswami</item>
        <item name="User2">Rahul Sahoo</item>
        <item name="User3">Dhairya Joshi</item>
        <item name="User4">Riya Singh</item>
        <item name="User5">Arya Prakash</item>
    </string-array>

    <string-array name="uploadTimes">
        <item name="User1">Just Now</item>
        <item name="User2">A few minutes ago</item>
        <item name="User3">An hour ago</item>
        <item name="User4">2h</item>
        <item name="User5">Yesterday</item>
    </string-array>

    <string-array name="captions">
        <item name="User1">Many of life\'s failures are people who did not realize how close they were to success when they gave up. \n-Thomas Alva Edison</item>
        <item name="User2">Hii, guys</item>
        <item name="User3">Welcome to the Orientation</item>
        <item name="User4">Get Started Now</item>
        <item name="User5">Vision the Unvisioned</item>
    </string-array>
</resources>