<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    tools:context=".CreateFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/discard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:fontFamily="@font/hkgrotesk_semibold"
        android:text="@string/discard"
        android:textAllCaps="false"
        android:textColor="@color/blue"
        android:textSize="14sp"
        app:cornerRadius="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/createText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/hkgrotesk_bold"
        android:text="@string/create"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/discard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/discard" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/publish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/pink"
        android:fontFamily="@font/hkgrotesk_semibold"
        android:text="@string/publish"
        android:textAllCaps="false"
        android:textSize="14sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/imageHolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/background"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addImage">

        <ImageView
            android:id="@+id/postImage"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:contentDescription="@string/posts_photo"
            android:scaleType="fitCenter"
            android:src="@color/background" />

    </androidx.cardview.widget.CardView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="5dp"
        android:indeterminate="true"
        android:indeterminateTint="@color/pink"
        android:indeterminateTintMode="src_atop"
        app:layout_constraintBottom_toBottomOf="@id/discard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/discard" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/image_preview"
        android:textColor="@color/shimmer_color"
        app:layout_constraintEnd_toEndOf="@id/imageHolder"
        app:layout_constraintStart_toStartOf="@id/imageHolder"
        app:layout_constraintTop_toBottomOf="@+id/imageHolder" />

    <androidx.cardview.widget.CardView
        android:id="@+id/dpHolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        app:cardCornerRadius="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/createText">

        <ImageView
            android:id="@+id/usepfp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/profile_photo"
            android:src="@drawable/ic_avatars" />

    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/caption"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/hkgrotesk_medium"
        android:hint="@string/what_s_in_your_mind"
        android:textColor="@color/white"
        android:textColorHint="#baf1f1f1"
        app:layout_constraintBottom_toBottomOf="@id/dpHolder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/dpHolder"
        app:layout_constraintTop_toTopOf="@id/dpHolder"
        android:autofillHints="false"
        android:inputType="text" />

    <TextView
        android:id="@+id/addImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:drawablePadding="5dp"
        android:fontFamily="@font/hkgrotesk_medium"
        android:gravity="center"
        android:text="@string/add_image"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/ic_add"
        app:layout_constraintStart_toStartOf="@id/dpHolder"
        app:layout_constraintTop_toBottomOf="@id/dpHolder" />

</androidx.constraintlayout.widget.ConstraintLayout>