<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserProfileFragment">

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/coverShimmer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="50dp">

        <include layout="@layout/cover_shimmer" />
    </com.facebook.shimmer.ShimmerFrameLayout>

    <ImageView
        android:id="@+id/coverPhoto"
        android:layout_width="0dp"
        android:layout_height="170dp"
        android:contentDescription="@string/cover_photo"
        android:scaleType="centerCrop"
        android:src="@drawable/cover"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/dpHolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="105dp"
        app:cardCornerRadius="65dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/coverPhoto"
        app:strokeColor="@color/pink"
        app:strokeWidth="1.5dp">

        <ImageView
            android:id="@+id/profilePhoto"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:contentDescription="@string/profile_photo"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_avatars" />

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/hkgrotesk_bold"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dpHolder"
        tools:text="user_name" />


    <View
        android:id="@+id/separator2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:alpha="0.1"
        android:background="@color/grey"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coverPhoto" />

    <View
        android:id="@+id/separator"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:alpha="0.6"
        android:background="@color/grey"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userName" />


    <TextView
        android:id="@+id/NameID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/hkgrotesk_regular"
        android:text="@string/name"
        android:textColor="@color/pink"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separator" />

    <TextView
        android:id="@+id/Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/hkgrotesk_semibold"
        android:textColor="@color/blue"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NameID"
        tools:text="User Full Name" />

    <TextView
        android:id="@+id/bioID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/hkgrotesk_regular"
        android:text="@string/bio"
        android:textColor="@color/pink"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Name" />

    <TextView
        android:id="@+id/bio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="@font/hkgrotesk_semibold"
        android:textColor="@color/blue"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bioID"
        tools:text="User Bio ..." />

    <ImageView
        android:id="@+id/recBG"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_rectangle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bio"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/postsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/hkgrotesk_medium"
        android:text="@string/posts"
        android:textColor="@color/pink"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@id/recBG"
        app:layout_constraintStart_toStartOf="@id/recBG"
        app:layout_constraintTop_toTopOf="@id/recBG" />

    <TextView
        android:id="@+id/noOfPosts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/hkgrotesk_semibold"
        android:textColor="@color/blue"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="@id/recBG"
        app:layout_constraintEnd_toEndOf="@id/recBG"
        app:layout_constraintStart_toStartOf="@id/recBG"
        app:layout_constraintTop_toTopOf="@id/recBG"
        tools:text="24" />

    <ImageView
        android:id="@+id/recBG2"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="70dp"
        android:src="@drawable/ic_rectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bio"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/likesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/hkgrotesk_medium"
        android:text="@string/likes"
        android:textColor="@color/pink"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@id/recBG2"
        app:layout_constraintStart_toStartOf="@id/recBG2"
        app:layout_constraintTop_toTopOf="@id/recBG2" />

    <TextView
        android:id="@+id/noOfLikes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/hkgrotesk_semibold"
        android:textColor="@color/blue"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="@id/recBG2"
        app:layout_constraintEnd_toEndOf="@id/recBG2"
        app:layout_constraintStart_toStartOf="@id/recBG2"
        app:layout_constraintTop_toTopOf="@id/recBG2"
        tools:text="132" />

</androidx.constraintlayout.widget.ConstraintLayout>