<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardHolder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/dpHolder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/profilePhoto"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/posts_photo"
                    android:src="@drawable/ic_avatars" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/hkgrotesk_semibold"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/dpHolder"
                app:layout_constraintTop_toTopOf="@id/dpHolder"
                tools:text="Adarsh Kumar Goswami" />

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:fontFamily="@font/hkgrotesk_semibold"
                android:textColor="@color/grey"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@id/userName"
                app:layout_constraintTop_toBottomOf="@id/userName"
                tools:text="Just Now" />

            <ImageView
                android:id="@+id/popupMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_more"
                android:padding="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/menu" />

            <ImageView
                android:id="@+id/like"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:contentDescription="@string/likes"
                android:src="@drawable/ic_favorite_light"
                android:padding="2dp"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="@+id/imageHolder"
                app:layout_constraintTop_toBottomOf="@id/imageHolder"/>

            <TextView
                android:id="@+id/noOfLikes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/hkgrotesk_medium"
                android:textColor="#F1F1F1"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/like"
                app:layout_constraintStart_toEndOf="@+id/like"
                app:layout_constraintTop_toTopOf="@id/like"
                tools:text="500" />

            <TextView
                android:id="@+id/caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="#F1F1F1"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dpHolder"
                tools:text="@string/long_caption" />

            <androidx.cardview.widget.CardView
                android:id="@+id/imageHolder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/background"
                app:cardCornerRadius="15dp"
                app:layout_constraintDimensionRatio="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/caption">

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="350dp"
                    android:layout_height="350dp"
                    android:src="@drawable/ic_loading"
                    android:contentDescription="@string/posts_photo" />

            </androidx.cardview.widget.CardView>

            <ImageView
                android:id="@+id/dpHeart"
                android:layout_width="95dp"
                android:layout_height="85dp"
                android:alpha="0"
                android:contentDescription="@string/double_tap_to_like"
                android:elevation="50dp"
                android:src="@drawable/heart"
                app:layout_constraintBottom_toBottomOf="@id/imageHolder"
                app:layout_constraintEnd_toEndOf="@id/imageHolder"
                app:layout_constraintStart_toStartOf="@id/imageHolder"
                app:layout_constraintTop_toTopOf="@id/imageHolder" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/separator"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:alpha="0.3"
        android:background="@color/grey"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardHolder" />

</androidx.constraintlayout.widget.ConstraintLayout>